objects/BMCServiceDesk__BMC_OperatingSystem__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__CountryCode__c</fullName>
        <label>Country Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfProcesses__c</fullName>
        <label>Maximum Number Of Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxProcessMemorySize__c</fullName>
        <label>Maximum Process Memory Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSLanguage__c</fullName>
        <label>OS Language</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSProductSuite__c</fullName>
        <label>OS Product Suite</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BackOffice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminal Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business (Restricted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSType__c</fullName>
        <label>OS Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTUNIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DECNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tru64 UNIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open VMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z/OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSDOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIN3x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIN95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIN98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCR3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetWare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC/OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliant UNIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO UnixWare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO Open Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sequent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Organization__c</fullName>
        <label>Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PAEEnabled__c</fullName>
        <label>PAE Enabled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Work Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Controller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SuiteMask__c</fullName>
        <label>Suite Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemDirectory__c</fullName>
        <label>System Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>